Migrate to marid-intellij-annotations