@@ -11,30 +11,13 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-spring-boot-starter</artifactId>
-      <version>3.0.0</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-push</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-themes</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-client-compiled</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-icons</artifactId>
-      <version>3.0.1</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
     <dependency>
@@ -54,14 +37,6 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>com.vaadin</groupId>
-        <artifactId>vaadin-bom</artifactId>
-        <version>8.2.1</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-
-      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
         <version>2.0.0.M7</version>
@@ -71,40 +46,7 @@
     </dependencies>
   </dependencyManagement>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>com.vaadin</groupId>
-        <artifactId>vaadin-maven-plugin</artifactId>
-        <version>8.2.1</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>update-theme</goal>
-              <goal>compile-theme</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.meecrowave</groupId>
-        <artifactId>meecrowave-maven-plugin</artifactId>
-        <version>1.2.0</version>
-        <configuration>
-          <stopPort>9999</stopPort>
-          <http2>true</http2>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
   <repositories>
-    <repository>
-      <id>vaadin-addons</id>
-      <url>http://maven.vaadin.com/vaadin-addons</url>
-    </repository>
-
     <repository>
       <id>spring-milestones</id>
       <url>http://repo.spring.io/milestone/</url>
@@ -142,6 +84,9 @@
                 <phase>package</phase>
               </execution>
             </executions>
+            <configuration>
+              <jvmArguments>--add-opens java.base/jdk.internal.ref=ALL-UNNAMED</jvmArguments>
+            </configuration>
           </plugin>
         </plugins>
       </build>
